@@ -103,6 +103,34 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
+"_comment": " [CATEGORY]: SPELLS - NAMES",
+
+	"mmorpg.synergy.fireball_syn_1": "Fireball Explosion",
+	"mmorpg.synergy.frostball_syn_1": "Cold Essence creation",
+	"mmorpg.synergy.frostball_syn_2": "Shiver Frostburn",
+	"mmorpg.synergy.heart_of_ice_syn_1": "Cold Healing Essence",
+	"mmorpg.synergy.heart_of_ice_syn_2": "Heart of Magic",
+	"mmorpg.synergy.imbue_syn_1": "Imbue Instinct",
+	"mmorpg.synergy.lightning_totem_syn_1": "Totem Static",
+	"mmorpg.synergy.magma_flower_syn_1": "Magma Bloom",
+	"mmorpg.synergy.magma_flower_syn_2": "Healing Magma Petals",
+	"mmorpg.synergy.nature_balm_syn_1": "Balm of Thorns",
+	"mmorpg.synergy.nature_balm_syn_2": "Spread Balm",
+	"mmorpg.synergy.poisoned_weapons_syn_1": "Poison thorn seeker",
+	"mmorpg.synergy.recoil_shot_syn_1": "Recoil of the hunter",
+	"mmorpg.synergy.recoil_shot_syn_2": "Recoil Wounds",
+	"mmorpg.synergy.thorn_armor_syn_1": "Thorny Armor",
+	"mmorpg.synergy.thorn_bush_syn_1": "Thorn Damage",
+	"mmorpg.synergy.thunder_dash_syn_1": "Energy Dash",
+	"mmorpg.synergy.thunder_spear_syn_1": "Spear Thunder Essence",
+	"mmorpg.synergy.thunder_spear_syn_2": "Spear Lightning",
+	"mmorpg.synergy.tidal_wave_syn_1": "Freezing Waves",
+	"mmorpg.synergy.volcano_syn_1": "Volcano Burn",
+	"mmorpg.synergy.whirlpool_syn_1": "Shiver pool",
+
+"_comment": " [CATEGORY]: SPELLS - NAMES",
+
+
 "_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 	"mmorpg.affix.arcanists": "Arcanist's",
@@ -235,34 +263,6 @@
 "_comment": " [CATEGORY]: ALCHEMY - NAMES",
 
 
-"_comment": " [CATEGORY]: SPELLS - NAMES",
-
-	"mmorpg.synergy.fireball_syn_1": "Fireball Explosion",
-	"mmorpg.synergy.frostball_syn_1": "Cold Essence creation",
-	"mmorpg.synergy.frostball_syn_2": "Shiver Frostburn",
-	"mmorpg.synergy.heart_of_ice_syn_1": "Cold Healing Essence",
-	"mmorpg.synergy.heart_of_ice_syn_2": "Heart of Magic",
-	"mmorpg.synergy.imbue_syn_1": "Imbue Instinct",
-	"mmorpg.synergy.lightning_totem_syn_1": "Totem Static",
-	"mmorpg.synergy.magma_flower_syn_1": "Magma Bloom",
-	"mmorpg.synergy.magma_flower_syn_2": "Healing Magma Petals",
-	"mmorpg.synergy.nature_balm_syn_1": "Balm of Thorns",
-	"mmorpg.synergy.nature_balm_syn_2": "Spread Balm",
-	"mmorpg.synergy.poisoned_weapons_syn_1": "Poison thorn seeker",
-	"mmorpg.synergy.recoil_shot_syn_1": "Recoil of the hunter",
-	"mmorpg.synergy.recoil_shot_syn_2": "Recoil Wounds",
-	"mmorpg.synergy.thorn_armor_syn_1": "Thorny Armor",
-	"mmorpg.synergy.thorn_bush_syn_1": "Thorn Damage",
-	"mmorpg.synergy.thunder_dash_syn_1": "Energy Dash",
-	"mmorpg.synergy.thunder_spear_syn_1": "Spear Thunder Essence",
-	"mmorpg.synergy.thunder_spear_syn_2": "Spear Lightning",
-	"mmorpg.synergy.tidal_wave_syn_1": "Freezing Waves",
-	"mmorpg.synergy.volcano_syn_1": "Volcano Burn",
-	"mmorpg.synergy.whirlpool_syn_1": "Shiver pool",
-
-"_comment": " [CATEGORY]: SPELLS - NAMES",
-
-
 "_comment": " [CATEGORY]: ITEM SETS - NAMES",
 
 	"mmorpg.set.archemage_vestments": "Mage's Robes",
@@ -299,6 +299,24 @@
 "_comment": " [CATEGORY]: ITEM SETS - NAMES",
 
 
+"_comment": " [CATEGORY]: LOOTBOXES - NAMES",
+
+	"item.mmorpg.lootbox.big_currency_lootbox_3": "§dEpic Big Currency Treasure Box",
+	"item.mmorpg.lootbox.big_currency_lootbox_4": "§6Legendary Big Currency Treasure Box",
+	"item.mmorpg.lootbox.big_gear_lootbox_3": "§dEpic Big Gear Treasure Box",
+	"item.mmorpg.lootbox.big_gear_lootbox_4": "§6Legendary Big Gear Treasure Box",
+	"item.mmorpg.lootbox.medium_currency_lootbox_3": "§dEpic Medium Currency Treasure Box",
+	"item.mmorpg.lootbox.medium_currency_lootbox_4": "§6Legendary Medium Currency Treasure Box",
+	"item.mmorpg.lootbox.medium_gear_lootbox_3": "§dEpic Medium Gear Treasure Box",
+	"item.mmorpg.lootbox.medium_gear_lootbox_4": "§6Legendary Medium Gear Treasure Box",
+	"item.mmorpg.lootbox.small_currency_lootbox_3": "§dEpic Small Currency Treasure Box",
+	"item.mmorpg.lootbox.small_currency_lootbox_4": "§6Legendary Small Currency Treasure Box",
+	"item.mmorpg.lootbox.small_gear_lootbox_3": "§dEpic Small Gear Treasure Box",
+	"item.mmorpg.lootbox.small_gear_lootbox_4": "§6Legendary Small Gear Treasure Box",
+
+"_comment": " [CATEGORY]: LOOTBOXES - NAMES",
+
+
 "_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
 
 	"mmorpg.advancement.title.addaffix": "Add Affix",
@@ -317,24 +335,6 @@
 	"mmorpg.advancement.title.welcomemineandslash": "Welcome to Mine and Slash!",
 
 "_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
-
-
-"_comment": " [CATEGORY]: LOOTBOXES - NAMES",
-
-	"item.mmorpg.lootbox.big_currency_lootbox_3": "§dEpic Big Currency Treasure Box",
-	"item.mmorpg.lootbox.big_currency_lootbox_4": "§6Legendary Big Currency Treasure Box",
-	"item.mmorpg.lootbox.big_gear_lootbox_3": "§dEpic Big Gear Treasure Box",
-	"item.mmorpg.lootbox.big_gear_lootbox_4": "§6Legendary Big Gear Treasure Box",
-	"item.mmorpg.lootbox.medium_currency_lootbox_3": "§dEpic Medium Currency Treasure Box",
-	"item.mmorpg.lootbox.medium_currency_lootbox_4": "§6Legendary Medium Currency Treasure Box",
-	"item.mmorpg.lootbox.medium_gear_lootbox_3": "§dEpic Medium Gear Treasure Box",
-	"item.mmorpg.lootbox.medium_gear_lootbox_4": "§6Legendary Medium Gear Treasure Box",
-	"item.mmorpg.lootbox.small_currency_lootbox_3": "§dEpic Small Currency Treasure Box",
-	"item.mmorpg.lootbox.small_currency_lootbox_4": "§6Legendary Small Currency Treasure Box",
-	"item.mmorpg.lootbox.small_gear_lootbox_3": "§dEpic Small Gear Treasure Box",
-	"item.mmorpg.lootbox.small_gear_lootbox_4": "§6Legendary Small Gear Treasure Box",
-
-"_comment": " [CATEGORY]: LOOTBOXES - NAMES",
 
 
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
@@ -1008,37 +1008,6 @@
 "_comment": " [CATEGORY]: ADVANCEMENT DESCRIPTIONS - NAMES",
 
 
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-	"mmorpg.gear_type.axe": "Axe",
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.bracelet": "Bracelet",
-	"mmorpg.gear_type.charm": "Charm",
-	"mmorpg.gear_type.cloth_boots": "Cloth Slippers",
-	"mmorpg.gear_type.cloth_chest": "Cloth Vest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Hat",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.hammer": "Hammer",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helm",
-	"mmorpg.gear_type.plate_pants": "Plate Greaves",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.torch": "Torch",
-	"mmorpg.gear_type.trident": "Trident",
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 	"item.mmorpg.uniques.axe.axefire0": "§eAxe of Blazing Cuts",
@@ -1133,6 +1102,37 @@
 	"item.mmorpg.uniques.sword.water_ele_saber0": "§eSaber of Frost madness",
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
+
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.axe": "Axe",
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.bracelet": "Bracelet",
+	"mmorpg.gear_type.charm": "Charm",
+	"mmorpg.gear_type.cloth_boots": "Cloth Slippers",
+	"mmorpg.gear_type.cloth_chest": "Cloth Vest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Hat",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.hammer": "Hammer",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helm",
+	"mmorpg.gear_type.plate_pants": "Plate Greaves",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.torch": "Torch",
+	"mmorpg.gear_type.trident": "Trident",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 
 "_comment": " [CATEGORY]: POTIONS - NAMES",
